[gd_scene load_steps=2 format=3 uid="uid://qfn1blrk3rme"]

[ext_resource type="Script" path="res://game/choices.gd" id="1_uy57o"]

[node name="Choices" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uy57o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Duration" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button1" type="Button" parent="VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Explore near"

[node name="Button2" type="Button" parent="VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Explore midway"

[node name="Button3" type="Button" parent="VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Explore far"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
